...
  Widget build(BuildContext context) {
    return Row(
      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
      crossAxisAlignment: CrossAxisAlignment.start,
      children: <Widget>[
        _ActionButton(
          label: controls.isFrozen ? 'Unfreeze' : 'Freeze Card',
          icon: LucideIcons.snowflake400,
          onTap: onFreezeTap,
        ),
        _ActionButton(
          label: controls.isRevealed ? 'Hide' : 'Reveal',
          icon: controls.isRevealed
              ? LucideIcons.eye400
              : LucideIcons.eyeOff400,
          onTap: onRevealTap,
        ),
        _ActionButton(
...
